--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,12 @@ config = "0.11.0"
 serde = { version = "1", features = ["derive"]}
 uuid = {version = "0.8.1", features = ["v4"]}
 chrono = "0.4.15"
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.2.4"
+tracing-log = "0.1.2"
+tracing-actix-web = "0.3.0-beta.2"
 
 [dependencies.sqlx]
 version = "0.5.1"
@@ -36,5 +42,6 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2"
+lazy_static = "1.4.0"
 reqwest = "0.11"
 tokio = "1"
