--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ actix-http = "=3.0.0-beta.5"
 actix-service = "=2.0.0-beta.5"
 actix-web = "=4.0.0-beta.5"
 config = "0.11.0"
+dotenv = "0.15.0"
 serde = { version = "1", features = ["derive"]}
 uuid = {version = "0.8.1", features = ["v4"]}
 chrono = "0.4.15"
