--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ tracing-bunyan-formatter = "0.2.4"
 tracing-log = "0.1.2"
 tracing-actix-web = "0.3.0-beta.2"
 serde-aux = "2.2.0"
+unicode-segmentation = "1.7.1"
+validator = "0.13.0"
 
 [dependencies.sqlx]
 version = "0.5.1"
@@ -45,6 +47,10 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2"
+claim = "0.5.0"
+fake = "~2.3"
 lazy_static = "1.4.0"
 reqwest = "0.11"
 tokio = "1"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
